--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
-.fa-cart-plus:before {
+.owl-nav{
+    float: right;
+  }
+  .owl-next, .owl-prev {
+  background-color: #1ea8df !important;
+  color: #fff !important;
+  border-radius: 50%;
+  width: 30px;
+  height: 35px;
+  margin: 10px;
+  }
+  .icon{
+    font-weight: 500px;
     color: #1ea8df;
-    content: "\f217";
+    float: right;
+}
+.position2{
+  position: absolute;
+  left: 100px;
+  bottom: 20px;
+
 }
